Freedom Sanbox Ant Deploy/src/objects/UserRoleID__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This custom setting holds all UserRole ids of users</description>
    <fields>
        <fullName>Executive_Comp__c</fullName>
        <label>Executive(Compliance)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPS_AMETHYST_PUNE__c</fullName>
        <label>FPS_AMETHYST_PUNE</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPS_GALAXY_DELHI__c</fullName>
        <label>FPS_GALAXY_DELHI</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPS_GALAXY_MUMBAI1__c</fullName>
        <label>FPS_GALAXY_MUMBAI1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPS_GALAXY_UJJAIN__c</fullName>
        <label>FPS_GALAXY_UJJAIN</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPS_MEAGAN_MUMBAI__c</fullName>
        <label>FPS_MEAGAN_MUMBAI</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Head_Compliance__c</fullName>
        <label>Head Compliance</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Head_Member_Engagement__c</fullName>
        <label>Head - Member Engagement</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mgr_Business_Development__c</fullName>
        <label>Mgr Business Development</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sr_Executive_Member_Engage__c</fullName>
        <label>Sr.Executive</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech__c</fullName>
        <label>Tech</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>UserRoleID</label>
</CustomObject>